@@ -1,3 +1,10 @@
+2006-09-18  Miguel de Icaza  <miguel@novell.com>
+
+	* test/string-util.c (test_filename_from_uri): tests for new
+	methods.
+
+	* src/gstr.c (g_filename_to_uri, g_filename_from_uri): implement. 
+
 2006-09-14  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* src/gutf8.c, test/utf8.c : EOL fix.
